@startuml WAL_Strategy_Pattern

title WAL Strategy Pattern with Assignment Service Integration
scale 1.2

interface "WalStrategy" as WalStrategy {
    + strategy_name()
    + initialize(config, filesystem)
    + set_storage_engine(engine)
    + write_entry(entry)
    + read_entries(collection_id, from_seq, limit)
    + flush(collection_id)
    + get_assignment_service()
    + select_wal_url_for_collection(collection_id, config)
    + discover_existing_assignments(config)
}

class "AvroWalStrategy" as AvroWAL {
    - config: WalConfig
    - filesystem: FilesystemFactory
    - memory_table: WalBehaviorWrapper
    - disk_manager: WalDiskManager
    - storage_engine: UnifiedStorageEngine
    - assignment_service: AssignmentService
    --
    + strategy_name()
    + serialize_entries(entries)
    + deserialize_entries(data)
    + get_assignment_service()
    --
    Memtable: HashMap (random access)
}

class "BincodeWalStrategy" as BincodeWAL {
    - config: WalConfig
    - filesystem: FilesystemFactory
    - memory_table: WalBehaviorWrapper
    - disk_manager: WalDiskManager
    - storage_engine: UnifiedStorageEngine
    - assignment_service: AssignmentService
    --
    + strategy_name()
    + serialize_entries(entries)
    + deserialize_entries(data)
    + get_assignment_service()
    --
    Memtable: BTree (ordered flush)
}

interface "AssignmentService" as AssignmentService {
    + assign_storage_url(collection_id, config)
    + get_assignment(collection_id, component_type)
    + record_assignment(collection_id, component_type, assignment)
    + remove_assignment(collection_id, component_type)
    + get_all_assignments(component_type)
    + get_assignment_stats()
}

class "RoundRobinAssignmentService" as RoundRobinService {
    - assignments: HashMap
    - round_robin_counters: HashMap
    + assign_storage_url(collection_id, config)
    + get_assignment(collection_id, component_type)
    + record_assignment(collection_id, component_type, assignment)
    + get_next_round_robin_index(component_type, storage_urls)
    + hash_collection_id(collection_id)
}

class "StorageAssignmentResult" as Assignment {
    + storage_url: String
    + directory_index: usize
    + assigned_at: DateTime
}

enum "StorageComponentType" as ComponentType {
    Wal
    Viper
    Lsm
    Index
    Metadata
}

class "WalConfig" as WalConfig {
    + wal_urls: Vec<String>
    + distribution_strategy: DistributionStrategy
    + collection_affinity: bool
    + memory_flush_size_bytes: usize
    + global_flush_threshold: usize
}

' Inheritance relationships
WalStrategy <|-- AvroWAL
WalStrategy <|-- BincodeWAL
AssignmentService <|-- RoundRobinService

' Composition relationships
AvroWAL *-- AssignmentService : uses
BincodeWAL *-- AssignmentService : uses
RoundRobinService --> Assignment : creates
RoundRobinService --> ComponentType : manages
WalStrategy --> WalConfig : configured by

' Method call flows
note bottom of WalStrategy
    **Base Trait Implementation:**
    
    ```rust
    async fn select_wal_url_for_collection(
        &self, 
        collection_id: &str, 
        config: &WalConfig
    ) -> Result<String> 
        // Check existing assignment
        if let Some(assignment) = self.get_assignment_service()
            .get_assignment(&CollectionId::from(collection_id), StorageComponentType::Wal).await 
            return Ok(assignment.storage_url);
        }
        
        // Create new assignment
        let assignment_config = StorageAssignmentConfig 
            storage_urls: config.wal_urls.clone(),
            component_type: StorageComponentType::Wal,
            collection_affinity: config.collection_affinity,
        };
        
        let assignment = self.get_assignment_service()
            .assign_storage_url(&CollectionId::from(collection_id), &assignment_config).await?;
            
        Ok(assignment.storage_url)
    }
    ```
end note

note right of RoundRobinService
    **Round-Robin Algorithm:**
    
    ```rust
    async fn get_next_round_robin_index(
        &self,
        component_type: StorageComponentType,
        storage_urls: &[String],
    ) -> Result<usize> 
        let mut counters = self.round_robin_counters.write().await;
        let counter = counters.entry(component_type).or_insert(0);
        let index = *counter % storage_urls.len();
        *counter = (*counter + 1) % storage_urls.len();
        Ok(index)
    }
    ```
    
    **Affinity Algorithm:**
    ```rust
    fn hash_collection_id(&self, collection_id: &CollectionId) -> usize 
        let mut hasher = DefaultHasher::new();
        collection_id.hash(&mut hasher);
        hasher.finish() as usize
    }
    ```
end note

note top of AvroWAL
    **Avro WAL Strategy:**
    • Schema-based serialization
    • Compact binary format
    • Cross-language compatibility
    • Built-in compression
end note

note top of BincodeWAL
    **Bincode WAL Strategy:**
    • Native Rust performance
    • Zero-copy deserialization
    • Minimal overhead
    • Type safety
end note

@enduml